<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".activity.DetailNeighbourActivity">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/content_description_arrow_back"
        android:elevation="1dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/neighbourImg"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:contentDescription="@string/content_description_img"
        android:elevation="0dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/neighbourImg"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textSize="@dimen/firstnamePhotoText"
        app:layout_constraintBottom_toBottomOf="@id/neighbourImg"
        app:layout_constraintStart_toStartOf="@+id/backArrow" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_favorite_button"
        android:paddingTop="@dimen/fab_margin"
        android:elevation="1dp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/cardview_contact"
        app:layout_constraintTop_toBottomOf="@id/firstname"
        app:srcCompat="@drawable/ic_star_border_yellow_24" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardview_contact"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/fab_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/neighbourImg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/header_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingBottom="@dimen/paddingBottom"
                android:text="@string/caroline"
                android:textColor="@color/black"
                android:textSize="@dimen/headerText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:backgroundTint="@color/colorAccent"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="@dimen/fab_margin"
                    android:textSize="@dimen/contentText" />


                <TextView
                    android:id="@+id/tel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:backgroundTint="@color/colorAccent"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:drawablePadding="@dimen/fab_margin"
                    android:textSize="@dimen/contentText" />

                <TextView
                    android:id="@+id/link_network"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:backgroundTint="@color/colorAccent"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:drawablePadding="@dimen/fab_margin"
                    android:textSize="@dimen/contentText" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_contact">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingBottom"
            android:showDividers="middle">

            <TextView
                android:id="@+id/header_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingBottom="@dimen/paddingBottom"
                android:text="@string/about_me"
                android:textColor="@color/black"
                android:textSize="@dimen/headerText" />

            <TextView
                android:id="@+id/aboutMe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin"
                android:textSize="@dimen/contentText" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>